@@ -27,7 +27,6 @@ import java.util.Spliterator;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 import java.util.stream.BaseStream;
-import java.util.stream.Collectors;
 
 import io.jenetics.Gene;
 import io.jenetics.engine.EvolutionInit;
@@ -37,7 +36,7 @@ import io.jenetics.engine.EvolutionStream;
 import io.jenetics.engine.EvolutionStreamable;
 import io.jenetics.internal.engine.EvolutionStreamImpl;
 
-import io.jenetics.ext.internal.ConcatSpliterator;
+import io.jenetics.ext.internal.util.ConcatSpliterator;
 
 /**
  * The {@code ConcatEngine} lets you concatenate two (or more) evolution
@@ -52,7 +51,7 @@ import io.jenetics.ext.internal.ConcatSpliterator;
  *   ------>|  Engine 1  |------------>|  Engine 2  |----------->
  *          |            | Result      |            |      Result
  *          +------------+             +------------+
- * }</pre>
+ * } </pre>
  *
  * The sketch above shows how the engine concatenation works. In this example,
  * the evolution stream of the first engine is evaluated until it terminates.
@@ -62,7 +61,7 @@ import io.jenetics.ext.internal.ConcatSpliterator;
  * Concatenating evolution engines might be useful, if you want to explore your
  * search space with random search first and then start the <em>real</em> GA
  * search.
- * <pre>{@code
+ * {@snippet lang="java":
  *  final Problem<double[], DoubleGene, Double> problem = Problem.of(
  *      v -> Math.sin(v[0])*Math.cos(v[1]),
  *      Codecs.ofVector(DoubleRange.of(0, 2*Math.PI), 2)
@@ -91,16 +90,16 @@ import io.jenetics.ext.internal.ConcatSpliterator;
  *
  *  System.out.println(result + ": " +
  *          problem.fitness().apply(problem.codec().decode(result)));
- * }</pre>
+ * }
  *
  * An essential part, when concatenating evolution engines, is to make sure your
- * your engines are creating <em>limited</em> evolution streams. This is what
+ * engines are creating <em>limited</em> evolution streams. This is what
  * the {@link EvolutionStreamable#limit(Supplier)} and
  * {@link EvolutionStreamable#limit(long)} methods are for. Limiting an engine
  * means, that this engine will surely create only streams, which are limited
  * with the predicate/generation given to the engine. If you have limited your
  * engines, it is no longer necessary to limit your final evolution stream, but
- * your are still able to do so.
+ * you are still able to do so.
  *
  * @see CyclicEngine
  *
@@ -122,7 +121,7 @@ public final class ConcatEngine<
 	 * Create a new concatenating evolution engine with the given list of engines.
 	 *
 	 * @param engines the engines which are concatenated to <em>one</em> engine
-	 * @throws NullPointerException if the {@code engines} or one of it's
+	 * @throws NullPointerException if the {@code engines} or one of its
 	 *         elements is {@code null}
 	 */
 	public ConcatEngine(final List<? extends EvolutionStreamable<G, C>> engines) {
@@ -142,7 +141,7 @@ public final class ConcatEngine<
 						.stream(() -> start(start, other))
 						.peek(result -> other.set(result.toEvolutionStart())))
 					.map(BaseStream::spliterator)
-					.collect(Collectors.toList())
+					.toList()
 			),
 			false
 		);
@@ -196,7 +195,7 @@ public final class ConcatEngine<
 						.stream(other::get)
 						.peek(er -> other.set(er.toEvolutionStart())))
 					.map(BaseStream::spliterator)
-					.collect(Collectors.toList())
+					.toList()
 			);
 
 			result = concat;
@@ -213,7 +212,7 @@ public final class ConcatEngine<
 	 * @param <G> the gene type
 	 * @param <C> the fitness type
 	 * @return a new concatenating evolution engine
-	 * @throws NullPointerException if the {@code engines} or one of it's
+	 * @throws NullPointerException if the {@code engines} or one of its
 	 *         elements is {@code null}
 	 */
 	@SafeVarargs
